--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lili-tunnel",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": ":heart_on_fire: nat tool for lili",
   "main": "index.js",
   "bin": {
@@ -19,12 +19,18 @@
   },
   "homepage": "https://github.com/dtboy1995/lili-tunnel#readme",
   "dependencies": {
+    "@koa/router": "^10.1.1",
     "colors": "^1.4.0",
     "commander": "^8.3.0",
     "download": "^8.0.0",
+    "find-process": "^1.4.5",
     "fs-extra": "^10.0.0",
+    "get-port": "^5.1.1",
+    "got": "^11.8.3",
     "ini": "^2.0.0",
+    "koa": "^2.13.4",
     "progress": "^2.0.3",
-    "table": "^6.7.3"
+    "table": "^6.7.3",
+    "terminate": "^2.2.2"
   }
 }
